# experiments-ml

./: .env.example  .env_template  .gitignore  LICENSE  README.md  files.py  helpers.py  main.py  main_pydantic.py  main_pydantic_moe.py  mcp_server.py  notes.py  pyproject.toml  reminders.py  tools_files.py  tools_notes.py
.junie/: guidelines.md
